fixed animation z-index

--- a/partials/_header.scss
+++ b/partials/_header.scss
@@ -80,24 +80,25 @@ header {
 
     a:last-of-type {
       font-weight: 600;
+      cursor: pointer;
     }
   }
 
   .animation {
     @include position();
     @include center(both);
-    color: rgba($primaryColour, 0.5);
-    box-shadow: inset 0 0 0 1px rgba($primaryColour, .5);
     @include media(desktop) {height: 600px; width: 600px;}
     @include media(tablet) {height: 450px; width: 450px;}
     @include media(portrait) {height: 400px; width: 400px;}
     @include media(mobile) {height: 300px; width: 300px;}
+    color: rgba($primaryColour, 0.5);
+    box-shadow: inset 0 0 0 1px rgba($primaryColour, .5);
+    z-index: -1;
   
     &::before,
     &::after {
       @include position();
       content: '';
-      z-index: -1;
       margin: -1 * $clip-distance * 100%;
       box-shadow: inset 0 0 0 $path-width; 
       animation: border-snake $animate-time linear infinite;
