--- a/styles/style.css
+++ b/styles/style.css
@@ -614,6 +614,7 @@ header .wrapper > div a {
 
 header .wrapper a:last-of-type {
   font-weight: 600;
+  cursor: pointer;
 }
 
 header .animation {
@@ -630,6 +631,7 @@ header .animation {
   color: rgba(238, 101, 49, 0.5);
   -webkit-box-shadow: inset 0 0 0 1px rgba(238, 101, 49, 0.5);
           box-shadow: inset 0 0 0 1px rgba(238, 101, 49, 0.5);
+  z-index: -1;
 }
 
 @media (min-width: 721px) {
@@ -667,7 +669,6 @@ header .animation::before, header .animation::after {
   bottom: 0;
   left: 0;
   content: '';
-  z-index: -1;
   margin: -5%;
   -webkit-box-shadow: inset 0 0 0 3px;
           box-shadow: inset 0 0 0 3px;
